--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,13 +21,7 @@ jobs:
       uses: actions/setup-node@v4
       with:
         node-version: '18'
-        cache: 'pnpm'
-    
-    - name: Setup pnpm
-      uses: pnpm/action-setup@v2
-      with:
-        version: 8
-        run_install: false
+        cache: 'npm'
         
     - name: Install macOS dependencies
       if: matrix.platform == 'macos-latest'
@@ -41,13 +35,13 @@ jobs:
         targets: x86_64-apple-darwin
         
     - name: Install dependencies
-      run: pnpm install
+      run: npm install
       
     - name: Build frontend
-      run: pnpm build
+      run: npm run build
       
     - name: Build Tauri app
-      run: pnpm tauri build
+      run: npm run tauri build
       
     - name: Upload artifacts
       uses: actions/upload-artifact@v4
