--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,11 +8,7 @@ on:
 
 jobs:
   build-tauri:
-    strategy:
-      matrix:
-        platform: [macos-latest]
-        
-    runs-on: ${{ matrix.platform }}
+    runs-on: macos-latest
     
     steps:
     - uses: actions/checkout@v4
@@ -21,10 +17,14 @@ jobs:
       uses: actions/setup-node@v4
       with:
         node-version: '18'
-        cache: 'npm'
+        cache: 'pnpm'  # 明确指定使用 pnpm 缓存
+        
+    - name: Setup pnpm
+      uses: pnpm/action-setup@v2
+      with:
+        version: 8
         
     - name: Install macOS dependencies
-      if: matrix.platform == 'macos-latest'
       run: |
         brew install pkg-config
         
@@ -35,13 +35,13 @@ jobs:
         targets: x86_64-apple-darwin
         
     - name: Install dependencies
-      run: npm install
+      run: pnpm install --frozen-lockfile  # 强制使用 pnpm-lock.yaml
       
     - name: Build frontend
-      run: npm run build
+      run: pnpm build
       
     - name: Build Tauri app
-      run: npm run tauri build
+      run: pnpm tauri build
       
     - name: Upload artifacts
       uses: actions/upload-artifact@v4
