--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,42 +13,24 @@ jobs:
     steps:
     - uses: actions/checkout@v4
     
-    - name: Install Node.js
+    - name: Setup Node
       uses: actions/setup-node@v4
       with:
-        node-version: '18'
+        node-version: 18
         
-    - name: Install pnpm globally
-      run: |
-        npm install -g pnpm@8
-        echo "PNPM version:"
-        pnpm --version
+    - name: Install Rust
+      uses: actions-rust-lang/setup-rust-toolchain@v1
+      with:
+        toolchain: stable
         
-    - name: Install macOS dependencies
+    - name: Install dependencies (macOS)
       run: |
         brew install pkg-config
         
-    - name: Install Rust
-      run: |
-        curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y
-        echo "##[add-path]$HOME/.cargo/bin"
-        echo "##[set-env name=PATH]$PATH:$HOME/.cargo/bin"
-        source $HOME/.cargo/env
-        rustup target add x86_64-apple-darwin
-        
-    - name: Install project dependencies
-      run: |
-        pnpm install
-        
-    - name: Build frontend
-      run: pnpm build
-      
-    - name: Build Tauri app
-      run: pnpm tauri build
-      
-    - name: Upload artifacts
-      uses: actions/upload-artifact@v4
+    - name: Build the app
+      uses: tauri-apps/tauri-action@v0
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
-        name: ncm2mp3-app-macos
-        path: src-tauri/target/release/bundle/
-        retention-days: 30
+        projectPath: './'
+        includeDebug: false
